--- a/README
+++ b/README
@@ -41,10 +41,50 @@
 ### 2. 数据匹配
 
 #### 核心功能
-* **（此处待补充，根据您的“数据匹配”功能编写）**
-
-#### 使用场景
-* **（此处待补充）**
+*   **灵活的数据源选择**：支持选择单个Excel/CSV文件或包含多个文件的整个目录作为待处理的数据源。
+*   **提取唯一值**：从选定的数据源中指定列提取所有唯一值，作为后续匹配的基础。
+*   **模糊匹配机制**：根据用户提供的匹配关系文件（文件B），对提取出的唯一值进行右模糊匹配（前缀匹配）。
+*   **分隔符替换**：在匹配前，支持对匹配关系文件（文件B）中的资源组进行分隔符替换，以适应不同的数据格式。
+*   **结果导出**：将成功匹配的数据和未能匹配的数据分别导出为独立的Excel文件，便于分析和后续处理。
 
 #### 使用说明
-* **（此处待补充）**
+1.  **模式选择**：根据你的需求，选择“文件”或“目录”模式。
+2.  **选择文件A/目录**：点击“选择文件a”按钮，选择你要处理的数据文件或目录。
+3.  **选择标题行数**：在下拉框中选择文件A的标题所在行数。
+4.  **读取标题列**：点击“读取标题列”按钮，程序将读取文件A的列标题并显示在下拉框中。
+5.  **选择匹配列**：在下拉框中选择你希望作为匹配条件的列。
+6.  **加载去重数据**：点击“加载去重数据”按钮，程序将从文件A中提取指定列的唯一值。
+7.  **选择文件B**：点击“选择文件b”按钮，选择包含匹配关系的文件（第一列为资源组，第二列为匹配值）。
+8.  **设置分隔符**：如果文件B中的资源组需要替换分隔符以进行匹配，请选择“原分隔符”和“目标分隔符”。
+9.  **开始匹配**：点击“开始匹配”按钮，程序将执行模糊匹配任务。
+10. **选择输出目录**（可选）：默认会输出到程序目录下的`output`文件夹，你也可以点击“选择目录”更改路径。
+11. **导出匹配结果**：匹配完成后，点击“导出匹配结果”按钮，将匹配成功和未匹配的数据导出。
+
+---
+
+### 3. 匹配分割
+
+#### 核心功能
+*   **批量文件处理**：支持处理单个文件或指定目录下的所有Excel/CSV文件。
+*   **精确映射匹配**：根据用户提供的映射关系文件（文件B），对源数据（文件A）的指定列进行精确匹配。
+*   **自动添加“所属”列**：匹配成功后，在源数据中新增一列“所属”，并填充匹配到的值；未匹配的则标记为“无匹配”。
+*   **智能分流导出**：
+    *   **按匹配结果分文件**：根据“所属”列的值，将数据分割成多个文件，每个文件包含一个“所属”组的数据。
+    *   **按行数分页**：支持将每个“所属”组的数据进一步按指定行数分页导出，避免单个文件过大。
+    *   **强制导出无匹配数据**：所有未能匹配的数据将统一导出到一个单独的“无匹配”文件中。
+*   **支持多种输出格式**：可选择导出为`.xlsx`或`.csv`格式。
+*   **Excel行数限制处理**：在单文件导出模式下，如果数据量超出Excel的行数限制，会给出警告并建议切换到分割模式。
+
+#### 使用说明
+1.  **选择文件A/目录**：点击“选择文件a”按钮，选择你要处理的数据文件或目录。
+2.  **选择标题行数**：在下拉框中选择文件A的标题所在行数。
+3.  **读取标题列**：点击“读取标题列”按钮，程序将读取文件A的列标题并显示在下拉框中。
+4.  **选择匹配列**：在下拉框中选择你希望作为匹配条件的列。
+5.  **选择文件B**：点击“选择文件b”按钮，选择包含精确匹配关系的文件（第一列为匹配键，第二列为映射值）。
+6.  **选择输出模式**：
+    *   “单文件输出”：所有匹配数据合并到一个文件。
+    *   “按匹配结果分文件”：根据匹配到的“所属”值，将数据分割到不同的文件。
+7.  **设置分页大小**：输入一个整数，指定每个输出文件包含的行数（在“按匹配结果分文件”模式下，此设置对每个分组有效）。
+8.  **选择输出格式**：选择导出文件的格式（.xlsx 或 .csv）。
+9.  **选择输出目录**（可选）：默认会输出到程序目录下的`output`文件夹，你也可以点击“选择目录”更改路径。
+10. **开始处理**：点击“开始处理”按钮，程序将执行匹配和分割任务。
